--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -12,10 +12,7 @@
 @import 'components/base';
 
 // Theme common styles.
-@import 'common/header/header';
-@import 'common/header/menu';
-@import 'common/footer/footer';
-@import 'common/footer/menu';
+@import 'common/header';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
