--- a/wp-content/themes/uhc/src/scss/common/header.scss
+++ b/wp-content/themes/uhc/src/scss/common/header.scss
@@ -9,7 +9,7 @@
   &_top{
     background-color: $Primary-1;
     color: $white;
-    padding: 11px;
+    padding: 5px;
 
     .container{
       display: flex;
@@ -28,6 +28,39 @@
   
   &-lang{
     text-transform: uppercase;
+
+    .wpml-ls-legacy-list-horizontal{
+      padding: 0;
+
+      .wpml-ls-current-language{
+        display: none;
+      }
+
+      a{
+        padding: 6px 0;
+        color: $white;
+        position: relative;
+
+        &:after{
+          content: '';
+          background-color: $white;
+          width: 100%;
+          height: 2px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          opacity: 0;
+          transition: opacity ease-out $transition;
+        }
+
+        &:is(:hover, :focus){
+          &:after{
+            opacity: 1;
+          }
+        }
+      }
+    }
   }
 
   &-menu{
