--- a/wp-content/themes/uhc/src/scss/components/vars.scss
+++ b/wp-content/themes/uhc/src/scss/components/vars.scss
@@ -41,7 +41,7 @@ $lh-title	: 1.2;
 // Colors.
 $white	: #fff;
 $black	: #000;
-$Primary-1: #26697D;
+$primary-color: #26697D;
 
 // Others.
 $transition		: 0.35s;
