--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -13,6 +13,7 @@
 
 // Theme common styles.
 @import 'common/header';
+@import 'common/footer';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
