--- a/wp-content/themes/uhc/src/scss/common/header.scss
+++ b/wp-content/themes/uhc/src/scss/common/header.scss
@@ -5,9 +5,10 @@
   left: 0;
   right: 0;
   z-index: 999;
+  background-color: $white;
 
   &_top{
-    background-color: $Primary-1;
+    background-color: $primary-color;
     color: $white;
     padding: 5px;
 
@@ -118,7 +119,7 @@
             top: 50%;
             transform: translateY(calc(-50% - 4px));
             right: 0;
-            background-image: url('../../src/image/select-arrow.svg');
+            background-image: url('../../src/images/select-arrow.svg');
             transition: transform ease-out $transition;
           }
 
@@ -142,13 +143,13 @@
     
     a{
       text-decoration: none;
-      color: $Primary-1;
+      color: $primary-color;
       padding-bottom: 6px;
       position: relative;
 
       &:after{
         content: '';
-        background-color: $Primary-1;
+        background-color: $primary-color;
         width: 100%;
         height: 2px;
         position: absolute;
