--- a/wp-content/themes/uhc/src/scss/components/base.scss
+++ b/wp-content/themes/uhc/src/scss/components/base.scss
@@ -11,7 +11,7 @@ body {
 	font-family: $ff;
 	font-size: $fs-md;
 	line-height: $lh;
-	color: $Primary-1;
+	color: $primary-color;
 	background-color: $white;
 }
 
