--- a/wp-content/themes/uhc/src/scss/components/base.scss
+++ b/wp-content/themes/uhc/src/scss/components/base.scss
@@ -106,3 +106,7 @@ img.alignright,
 /*************************************/
 /* /End of the Styles for WP content */
 /*************************************/
+
+section{
+	padding: 60px 0;
+}
