info section desktop

--- a/wp-content/themes/uhc/src/scss/components/typography.scss
+++ b/wp-content/themes/uhc/src/scss/components/typography.scss
@@ -7,7 +7,8 @@ h6, .h6 {
 	font-family: $ff-title;
 	font-weight: $fw-bold;
 	line-height: $lh-title;
-	margin: 0 0 1rem
+	margin: 0 0 1rem;
+	text-transform: uppercase;
 }
 
 h1, .h1 {
@@ -19,11 +20,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-	font-size: 32px;
-
-	@include media-breakpoint-up(sm) {
-		font-size: 24px;
-	}
+	font-size: 36px;
+	margin-bottom: 32px;
 }
 
 h3, .h3 {
