--- a/wp-content/themes/uhc/src/scss/components/vars.scss
+++ b/wp-content/themes/uhc/src/scss/components/vars.scss
@@ -35,7 +35,7 @@ $fw-extrabold	: 800;
 $fw-black		: 900;
 
 // Line heights.
-$lh			: 1.4;
+$lh			: normal;
 $lh-title	: 1.2;
 
 // Colors.
@@ -43,6 +43,7 @@ $white	: #fff;
 $black	: #000;
 $primary-color: #26697D;
 $gray-2: #868686;
+$primary-2: #CBF9CC;
 
 // Others.
 $transition		: 0.35s;
