--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import '../../node_modules/swiper/swiper-bundle.css';
 
 // Theme components.
+@import 'components/fonts';
 @import 'components/vars';
 @import 'components/typography';
 
@@ -15,7 +16,8 @@
 // Theme common styles.
 @import 'common/header';
 @import 'common/footer';
-@import 'common/banner_slider';
+@import 'common/sections/banner_slider';
+@import 'common/sections/info_section_dark_background';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
