image and content section desktop

--- a/wp-content/themes/uhc/src/scss/components/base.scss
+++ b/wp-content/themes/uhc/src/scss/components/base.scss
@@ -110,3 +110,33 @@ img.alignright,
 section{
 	padding: 60px 0;
 }
+
+.swiper{
+	&-pagination{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		&-bullet{
+			--swiper-pagination-bullet-horizontal-gap: 5px;
+
+			transition: transform ease-out $transition, background-color ease-out $transition;
+			height: 16px;
+			width: 16px;
+			background-color: $gray-2;
+			opacity: 1;
+
+			&-active{
+				height: 24px;
+				width: 24px;
+				background-color: $white;
+			}
+		}
+
+		&_alt{
+			.swiper-pagination-bullet-active{
+				background-color: $primary-color;
+			}
+		}
+	}
+}
