--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'common/footer';
 @import 'common/sections/banner_slider';
 @import 'common/sections/info_section_dark_background';
+@import 'common/sections/image_and_content_slider';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
