--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'common/sections/banner_slider';
 @import 'common/sections/info_section_dark_background';
 @import 'common/sections/image_and_content_slider';
+@import 'common/sections/cards_slider';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
