team section photos and title

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'common/sections/info_section_dark_background';
 @import 'common/sections/image_and_content_slider';
 @import 'common/sections/cards_slider';
+@import 'common/sections/team';
 
 // Other styles. Please headline each group of your custom styles, for example:
 // ACF Flexible content styles.
