--- a/wp-content/themes/uhc/src/scss/common/sections/team.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/team.scss
@@ -74,4 +74,10 @@
       font-weight: $fw-bold;
     }
   }
+
+  &-button{
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+  }
 }
