faq section desktop

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'common/sections/image_and_content_slider';
 @import 'common/sections/cards_slider';
 @import 'common/sections/team';
+@import 'common/sections/faq';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
