--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -23,6 +23,7 @@
 @import 'common/sections/cards_slider';
 @import 'common/sections/team';
 @import 'common/sections/faq';
+@import 'common/sections/ticker_logos';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
