text editor section

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'common/sections/team';
 @import 'common/sections/faq';
 @import 'common/sections/ticker_logos';
+@import 'common/sections/text_editor';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
