--- a/wp-content/themes/uhc/src/scss/components/base.scss
+++ b/wp-content/themes/uhc/src/scss/components/base.scss
@@ -109,6 +109,10 @@ img.alignright,
 
 section{
 	padding: 60px 0;
+
+	&:last-of-type{
+		padding-bottom: 120px;
+	}
 }
 
 .swiper{
@@ -160,4 +164,8 @@ section{
 	margin: 0 auto;
 	padding: 60px 40px;
 	color: $white;
+}
+
+.mgt-100{
+	margin-top: 100px;
 }
