--- a/wp-content/themes/uhc/src/scss/common/sections/team.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/team.scss
@@ -14,7 +14,7 @@
     width: calc(33.33% - 40px);
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 8px;
 
     &__photo{
       width: 100%;
@@ -70,6 +70,7 @@
     }
 
     &__name{
+      padding-top: 16px;
       font-size: $fs-xl;
       font-weight: $fw-bold;
     }
