--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import '../../node_modules/bootstrap/scss/variables';
 @import '../../node_modules/bootstrap/scss/mixins';
 @import '../../node_modules/bootstrap/scss/reboot';
-@import '../../node_modules/swiper/swiper-bundle.css';
+@import 'common/plugins/swiper-bundle';
 
 // Theme components.
 @import 'components/fonts';
