--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'common/sections/ticker_logos';
 @import 'common/sections/text_editor';
 @import 'common/sections/quotes_slider';
+@import 'common/sections/single-post';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
