--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -27,6 +27,9 @@
 @import 'common/sections/text_editor';
 @import 'common/sections/quotes_slider';
 @import 'common/sections/single-post';
+@import 'common/sections/archive';
+@import 'common/sections/post-preview';
+@import 'common/sections/pagintaion';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
