--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -60,7 +60,7 @@
         object-position: center;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
 
       &_empty{
