--- a/wp-content/themes/uhc/src/scss/components/vars.scss
+++ b/wp-content/themes/uhc/src/scss/components/vars.scss
@@ -42,6 +42,7 @@ $lh-title	: 1.2;
 $white	: #fff;
 $black	: #000;
 $primary-color: #26697D;
+$gray-1: #F4F4F4;
 $gray-2: #868686;
 $primary-2: #CBF9CC;
 
