page head section

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'common/sections/archive';
 @import 'common/sections/post-preview';
 @import 'common/sections/pagintaion';
+@import 'common/sections/page';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
