text-image section

--- a/wp-content/themes/uhc/src/scss/common/sections/page-head.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/page-head.scss
@@ -1,5 +1,4 @@
-.page{
-  &-head{
+.page-head{
     text-align: center;
     padding-top: 30px;
     padding-bottom: 40px;
@@ -14,5 +13,4 @@
       max-width: 1096px;
       margin: 0 auto;
     }
-  }
 }
