--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -30,7 +30,8 @@
 @import 'common/sections/archive';
 @import 'common/sections/post-preview';
 @import 'common/sections/pagintaion';
-@import 'common/sections/page';
+@import 'common/sections/page-head';
+@import 'common/sections/image-and-text';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
