--- a/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
@@ -1,12 +1,44 @@
-.post-preview{
+.post-preview {
   border-radius: 50px;
-  background: $gray-1;
   padding: 24px;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  position: relative;
 
-  &__thumbnail{
+  &:hover{
+    border-radius: 0;
+
+    .post-preview__thumbnail {
+      border-radius: 0;
+    }
+    .post-preview__read-more {
+      opacity: 1;
+    }
+
+    &:before{
+      border-radius: 0;
+      max-height: 100%;
+    }
+  }
+
+  &:before{
+    content: '';
+    border-radius: 50px;
+    transition: border-radius linear $transition;
+    background: $gray-1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-height: calc(100% - 73px);
+  }
+
+  & > *{
+    z-index: 1;
+  }
+
+  &__thumbnail {
     background-color: $primary-color;
     border-radius: 50px;
     width: 100%;
@@ -15,29 +47,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: border-radius ease-out $transition;
 
-    span{
+    span {
       transition: transform ease-out $transition;
       display: inline-block;
     }
 
-    &:is(:hover, :focus){
-      span{
+    &:is(:hover, :focus) {
+      span {
         transform: scale(1.1);
       }
     }
 
     img,
-    svg{
+    svg {
       object-position: center;
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
 
-    &_empty{
+    &_empty {
       img,
-      svg{
+      svg {
         width: auto;
         height: auto;
         object-fit: none;
@@ -45,7 +78,7 @@
     }
   }
 
-  &__title{
+  &__title {
     font-size: $fs-sm;
     font-style: normal;
     font-weight: $fw-medium;
@@ -53,21 +86,22 @@
     color: $primary-color;
     width: 100%;
     text-align: left;
+    padding-top: 32px;
 
-    &:is(:hover, :focus){
+    &:is(:hover, :focus) {
       text-decoration: underline;
     }
   }
 
-  &__original{
-    padding-top: 12px;
+  &__original {
     text-transform: uppercase;
     font-weight: $fw-bold;
     font-size: 10px;
     display: flex;
     align-items: center;
+    padding-top: 44px;
 
-    &:before{
+    &:before {
       content: '';
       display: inline-block;
       width: 12px;
@@ -75,6 +109,45 @@
       border-radius: 12px;
       background-color: $primary-color;
       margin-right: 8px;
+    }
+  }
+
+  &__read-more {
+    font-weight: $fw-bold;
+    font-size: $fs-sm;
+    text-decoration: none;
+    color: $primary-color;
+    margin-top: 15px;
+    overflow: hidden;
+    opacity: 0;
+    transition: opacity ease-in-out $transition 0.1s;
+
+    &:is(:hover, :focus){
+      color: $primary-color;
+
+      .icon{
+        transform: translateX(5px);
+      }
+    }
+
+    &>span{
+      padding-top: 54px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .icon{
+      transition: transform ease-out $transition;
+
+      svg{
+        height: 16px;
+        width: 16px;
+
+        path{
+          fill: $primary-color;
+        }
+      }
     }
   }
 }
