--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'common/sections/pagintaion';
 @import 'common/sections/page-head';
 @import 'common/sections/image-and-text';
+@import 'common/sections/buttons';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
