--- a/wp-content/themes/uhc/src/scss/common/sections/faq.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/faq.scss
@@ -19,7 +19,19 @@
       padding: 32px 0;
       transition: color ease-out $transition;
 
+      &_Medium{
+        font-size: 24px;
+      }
+
+      &_Small{
+        font-size: 16px;
+      }
+
       span{
+        &:nth-child(1){
+          flex: 1 1 auto;
+        }
+
         &.number{
           min-width: 295px;
 
