--- a/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
@@ -82,7 +82,7 @@
   &__title {
     font-size: $fs-sm;
     font-style: normal;
-    font-weight: $fw-medium;
+    font-weight: $fw-bold;
     text-decoration: none;
     color: $primary-color;
     width: 100%;
@@ -92,6 +92,10 @@
     &:is(:hover, :focus) {
       text-decoration: underline;
     }
+  }
+
+  &__excerpt{
+    padding-top: 32px;
   }
 
   &__original {
@@ -111,6 +115,12 @@
       background-color: $primary-color;
       margin-right: 8px;
     }
+
+    &_top{
+      padding-top: 0;
+      font-size: 16px;
+      margin-bottom: 12px;
+    }
   }
 
   &__read-more {
@@ -118,10 +128,10 @@
     font-size: $fs-sm;
     text-decoration: none;
     color: $primary-color;
-    margin-top: 15px;
     overflow: hidden;
     opacity: 0;
     transition: opacity ease-in-out $transition 0.1s;
+    margin-top: auto;
 
     &:is(:hover, :focus){
       color: $primary-color;
@@ -149,6 +159,89 @@
           fill: $primary-color;
         }
       }
+    }
+  }
+
+  &_full{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    padding: 24px;
+    position: relative;
+
+    & > *{
+      z-index: 1;
+    }
+
+    &:hover{
+      &:before{
+        border-radius: 0;
+        box-shadow: 5px 5px 13.1px 0px rgba(0, 0, 0, 0.25);
+      }
+
+      .post-preview__thumbnail{
+        border-radius: 0;
+      }
+
+      .post-preview-link{
+        a{
+          opacity: 1;
+        }
+      }
+    }
+
+    .post-preview-content{
+      padding: 50px 0;
+      flex: 1 1 auto;
+    }
+
+    &:before{
+      content: '';
+      border-radius: 50px;
+      transition: border-radius linear $transition, box-shadow linear $transition;
+      background: $gray-1;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .post-preview__thumbnail{
+      height: 300px;
+      max-width: 300px;
+    }
+
+    .post-preview__title{
+      color: $primary-color;
+      font-size: 24px;
+      font-weight: $fw-bold;
+      margin-bottom: 40px;
+    }
+
+    .post-preview-link{
+      display: flex;
+      height: 100%;
+      max-width: 50px;
+      align-items: flex-end;
+
+      a{
+        transition: opacity ease-out $transition, transform ease-out $transition;
+        opacity: 0;
+
+        &:is(:hover, :focus){
+          transform: scale(0.9);
+        }
+      }
+    }
+  }
+}
+
+.archive-body_3-columns{
+  .post-preview{
+    .post-preview__thumbnail{
+      height: 340px;
     }
   }
 }
