--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -8,6 +8,16 @@
       gap: 48px;
     }
 
+    &_reverse{
+      .container{
+        flex-direction: row-reverse;
+      }
+    }
+
+    &_flexible-template{
+      margin-bottom: 60px;
+    }
+
     &__back{
       width: 100%;
 
@@ -44,6 +54,20 @@
       }
     }
 
+    &__text{
+      max-width: calc(100% - 400px - 48px);
+      flex: 1 1 auto;
+      display: flex;
+      align-items: center;
+
+      &-inner{
+        h1{
+          font-size: 36px;
+          text-transform: none;
+        }
+      }
+    }
+
     &__thumbnail{
       height: 400px;
       width: 100%;
@@ -60,7 +84,7 @@
         object-position: center;
         width: 100%;
         height: 100%;
-      object-fit: contain;
+      object-fit: cover;
       }
 
       &_empty{
