--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'common/sections/page-head';
 @import 'common/sections/image-and-text';
 @import 'common/sections/buttons';
+@import 'common/sections/small-cards';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
