--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -15,7 +15,11 @@
     }
 
     &_flexible-template{
-      margin-bottom: 60px;
+      margin: 200px 0;
+
+      &:first-child{
+        margin: 0 0 60px;
+      }
     }
 
     &__back{
