text columns section

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -34,6 +34,7 @@
 @import 'common/sections/image-and-text';
 @import 'common/sections/buttons';
 @import 'common/sections/small-cards';
+@import 'common/sections/text-columns';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
