text in frame section

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -35,6 +35,7 @@
 @import 'common/sections/buttons';
 @import 'common/sections/small-cards';
 @import 'common/sections/text-columns';
+@import 'common/sections/text_in_frame';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
