--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'common/sections/small-cards';
 @import 'common/sections/text-columns';
 @import 'common/sections/text_in_frame';
+@import 'common/sections/logos';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
