single body container

--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -122,6 +122,10 @@
     padding-bottom: 128px;
     font-size: 20px;
 
+    .container{
+      max-width: 1070px;
+    }
+
     &__inner{
       padding-top: 123px;
     }
