--- a/wp-content/themes/uhc/src/scss/components/vars.scss
+++ b/wp-content/themes/uhc/src/scss/components/vars.scss
@@ -44,6 +44,7 @@ $black	: #000;
 $primary-color: #26697D;
 $gray-1: #F4F4F4;
 $gray-2: #868686;
+$gray-3: #C4C4C4;
 $primary-2: #CBF9CC;
 
 // Others.
