google map working

--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -37,6 +37,7 @@
 @import 'common/sections/text-columns';
 @import 'common/sections/text_in_frame';
 @import 'common/sections/logos';
+@import 'common/sections/contacts';
 
 
 // Other styles. Please headline each group of your custom styles, for example:
