--- a/wp-content/themes/uhc/src/scss/main.scss
+++ b/wp-content/themes/uhc/src/scss/main.scss
@@ -13,6 +13,7 @@
 // Theme base styles.
 @import 'components/base';
 @import 'components/button';
+@import 'components/form';
 
 // Theme common styles.
 @import 'common/header';
