--- a/wp-content/themes/uhc/src/scss/common/sections/contacts.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/contacts.scss
@@ -56,4 +56,66 @@
       max-width: 550px;
     }
   }
+
+  &-social{
+    margin-top: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
+
+    &__title{
+      background-color: $primary-color;
+      color: $white;
+      min-height: 132px;
+      font-size: 22px;
+      flex: 1 1 auto;
+      font-weight: 700;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 16px;
+      border-radius: 24px;
+      text-transform: uppercase;
+    }
+
+    &__link{
+      min-height: 132px;
+      padding: 28px 16px;
+      background-color: $gray-3;
+      border-radius: 24px;
+      display: flex;
+      flex-direction: column;
+      color: $primary-color;
+      font-size: 16px;
+      font-weight: 700;
+      text-decoration: none;
+      transition: color ease-out $transition, background-color ease-out $transition;
+      min-width: 210px;
+
+      span{
+        svg{
+          min-width: 32px;
+          min-height: 32px;
+          path{
+            transition: fill ease-out $transition;
+          }
+        }
+        &:nth-child(2){
+          margin-top: 36px;
+        }
+      }
+
+      &:is(:hover, :focus){
+        background-color: $primary-color;
+        color: $white;
+
+        svg{
+          path{
+            fill: $white;
+          }
+        }
+      }
+    }
+  }
 }
