--- a/wp-content/themes/uhc/src/scss/components/form.scss
+++ b/wp-content/themes/uhc/src/scss/components/form.scss
@@ -16,6 +16,7 @@ textarea{
   display: flex;
   flex-direction: column;
   gap: 8px;
+  margin-bottom: 32px;
 
   &_submit{
     flex-direction: row;
