--- a/wp-content/themes/uhc/src/scss/common/header.scss
+++ b/wp-content/themes/uhc/src/scss/common/header.scss
@@ -12,6 +12,10 @@
     color: $white;
     padding: 5px;
 
+    @include media-breakpoint-down(lg){
+      display: none;
+    }
+
     .container{
       display: flex;
       justify-content: flex-end;
@@ -21,12 +25,12 @@
 
   &_bottom{
     padding: 30px 0;
-    .container{
+    &>.container{
       display: flex;
       align-items: center;
     }
   }
-  
+
   &-lang{
     text-transform: uppercase;
 
@@ -83,7 +87,7 @@
       display: flex;
       justify-content: flex-end;
 
-      @include media-breakpoint-down(md){
+      @include media-breakpoint-down(lg){
         display: none;
       }
     }
@@ -149,7 +153,7 @@
         }
       }
     }
-    
+
     a{
       text-decoration: none;
       color: $primary-color;
@@ -175,5 +179,158 @@
         }
       }
     }
+  }
+
+  &-burger{
+    display: none;
+    height: 36px;
+    width: 36px;
+    position: relative;
+    margin-left: auto;
+
+    @include media-breakpoint-down(lg){
+      display: block;
+    }
+
+    span{
+      height: 2px;
+      width: 18px;
+      background-color: $primary-color;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 5px;
+      transition: background-color ease-out $transition;
+
+      &:before,
+      &:after{
+        content: '';
+        position: absolute;
+        width: 18px;
+        height: 2px;
+        border-radius: 5px;
+        background-color: $primary-color;
+        left: 50%;
+        top: 0;
+        transition: transform ease-out $transition;
+      }
+
+      &:before{
+        transform: translate(-50%, -5px);
+      }
+
+      &:after{
+        transform: translate(-50%, 5px);
+      }
+    }
+  }
+
+  .mobile-menu-area{
+    position: fixed;
+    inset: 0;
+    background-color: $white;
+    overflow: auto;
+    max-height: 100vh;
+    transition: opacity ease-out $transition, transform ease-out $transition;
+
+    pointer-events: none;
+    transform: translateY(10px);
+    opacity: 0;
+
+    &-head{
+      position: fixed;
+      z-index: 3;
+      background-color: $white;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+
+    &-social{
+      padding: 40px 0 0 0;
+      margin: 0;
+      display: flex;
+      gap: 48px;
+      justify-content: center;
+
+      li{
+        list-style-type: none;
+      }
+    }
+
+    .wpml-ls-legacy-list-horizontal{
+      padding-top: 40px;
+
+      ul{
+        display: flex;
+        justify-content: center;
+        gap: 35px;
+
+        li{
+          a{
+            text-transform: uppercase;
+            font-weight: 700;
+            color: $primary-color;
+            padding: 0;
+          }
+        }
+      }
+    }
+  }
+
+  &-mobile-menu{
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    li{
+      list-style-type: none;
+
+      a{
+        color: $primary-color;
+        text-decoration: none;
+      }
+    }
+
+    .sub-menu{
+      display: none;
+    }
+  }
+}
+
+.header-menu-opened{
+  overflow: hidden;
+
+  .header-burger{
+    z-index: 2;
+    span{
+      background-color: transparent;
+
+      &:before{
+        transform: rotate(45deg) translate(-50%, 9px);
+      }
+
+      &:after{
+        transform: rotate(-45deg) translate(-50%, -9px);
+      }
+    }
+  }
+
+  .header-logo{
+    position: relative;
+    z-index: 2;
+  }
+
+  .mobile-menu-area{
+    pointer-events: auto;
+    opacity: 1;
+    transform: translateY(0);
   }
 }
