--- a/wp-content/themes/uhc/src/scss/common/sections/banner_slider.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/banner_slider.scss
@@ -8,13 +8,13 @@
   .swiper{
     &-slide {
       &__inner{
-        height: 440px;
+        //height: 440px;
         overflow: hidden;
         border-radius: 50px;
         img{
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          object-fit: contain;
         }
       }
     }
