--- a/wp-content/themes/uhc/src/scss/common/footer.scss
+++ b/wp-content/themes/uhc/src/scss/common/footer.scss
@@ -3,14 +3,27 @@
   color: $white;
   padding: 29px 0 100px;
 
+  @include media-breakpoint-down(xs){
+    padding: 40px 0;
+  }
+
   .container{
     display: flex;
     gap: 20px;
+
+    @include media-breakpoint-down(xs){
+      flex-direction: column;
+      gap: 40px;
+    }
   }
 
   .col{
     display: flex;
     flex-direction: column;
+
+    @include media-breakpoint-down(xs){
+      display: contents;
+    }
 
     &:nth-child(2){
       max-width: 506px;
@@ -20,6 +33,14 @@
       justify-content: space-between;
       padding-right: 110px;
       gap: 30px;
+
+      @include media-breakpoint-down(sm){
+        padding-right: 0;
+      }
+
+      @include media-breakpoint-down(xs){
+        display: contents;
+      }
     }
   }
 
@@ -27,15 +48,40 @@
     display: flex;
     flex-direction: column;
     gap: 46px;
+
+    @include media-breakpoint-down(xs){
+      order: 3;
+      text-align: center;
+      gap: 24px;
+    }
   }
 
   &-logo{
     margin-bottom: 5px;
+
+    @include media-breakpoint-down(xs){
+      margin: 0 auto;
+      max-width: 150px;
+      order: 1;
+    }
+
+    svg{
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   &-info{
     display: flex;
     gap: 16px;
+
+    @include media-breakpoint-down(xs){
+      order: 2;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      font-size: 14px;
+    }
 
     span{
       &:first-child{
@@ -47,7 +93,7 @@
     a{
       color: $white;
       text-decoration: none;
-      
+
       &:is(:hover, :focus){
         text-decoration: underline;
       }
@@ -59,6 +105,12 @@
     margin: 0;
     display: flex;
     gap: 33px;
+
+    @include media-breakpoint-down(xs){
+      order: 1;
+      justify-content: center;
+      gap: 60px;
+    }
 
     li{
       list-style-type: none;
@@ -91,10 +143,21 @@
     display: flex;
     flex-wrap: wrap;
     gap: 14px;
-    
+
+    @include media-breakpoint-down(xs){
+      order: 2;
+      text-align: center;
+      padding-top: 0;
+      gap: 20px;
+    }
+
     li{
       list-style-type: none;
       width: calc(50% - 10px);
+
+      @include media-breakpoint-down(sm){
+        width: 100%;
+      }
 
       a{
         color: $white;
@@ -103,6 +166,12 @@
         font-weight: $fw-medium;
         padding: 6px 0;
         position: relative;
+
+        @include media-breakpoint-down(xs){
+          order: 2;
+          text-align: center;
+          padding-top: 0;
+        }
 
         &:after{
           content: '';
@@ -125,12 +194,18 @@
       }
     }
   }
-  
+
   &-subscribe{
     text-transform: uppercase;
     display: flex;
     flex-direction: column;
     gap: 14px;
+
+    @include media-breakpoint-down(xs){
+      order: 4;
+      font-size: 14px;
+      text-align: center;
+    }
 
     &__link{
       a{
@@ -161,5 +236,6 @@
         }
       }
     }
+
   }
 }
