--- a/wp-content/themes/uhc/src/scss/common/sections/banner_slider.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/banner_slider.scss
@@ -11,16 +11,30 @@
         //height: 440px;
         overflow: hidden;
         border-radius: 50px;
+
+        @include media-breakpoint-down(sm){
+          height: 250px;
+          border-radius: 24px;
+        }
+
         img{
           width: 100%;
           height: 100%;
           object-fit: contain;
+
+          @include media-breakpoint-down(sm){
+            object-fit: cover;
+          }
         }
       }
     }
 
     &-pagination{
       bottom: 28px;
+
+      @include media-breakpoint-down(sm){
+        bottom: 12px;
+      }
     }
   }
 }
