--- a/wp-content/themes/uhc/src/scss/common/sections/cards_slider.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/cards_slider.scss
@@ -2,8 +2,24 @@
   padding: 0 60px;
   position: relative;
 
+  @include media-breakpoint-down(md){
+    padding: 0 40px;
+  }
+
+  @include media-breakpoint-down(xs){
+    padding: 0;
+  }
+
   &-section{
     text-align: center;
+
+    .colored-wrapper{
+      @include media-breakpoint-down(xs){
+        padding: 0;
+        border-radius: 0;
+        background-color: transparent;
+      }
+    }
 
     h2{
       margin-bottom: 36px;
@@ -11,12 +27,30 @@
 
     &-text{
       margin-bottom: 36px;
+
+      @include media-breakpoint-down(xs){
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &-text-wrapper{
+    @include media-breakpoint-down(xs){
+      border-radius: 24px;
+      padding: 24px;
+      background-color: $primary-color;
+      margin-bottom: 24px;
     }
   }
 
   .swiper{
     &-wrapper{
       margin: 0 auto;
+
+      @include media-breakpoint-down(xs){
+        flex-direction: column;
+        gap: 24px;
+      }
     }
 
     &-slide{
@@ -29,6 +63,17 @@
 
         @include media-breakpoint-down(lg){
           min-height: 250px;
+        }
+
+        @include media-breakpoint-down(md){
+          min-height: 200px;
+        }
+
+        @include media-breakpoint-down(xs){
+          flex-direction: column;
+          border-radius: 24px;
+          min-height: auto;
+          border: 1px solid $primary-color;
         }
 
         div{
@@ -45,10 +90,47 @@
           justify-content: center;
           transition: opacity ease-out $transition;
 
+          @include media-breakpoint-down(md){
+            padding: 15px;
+            font-size: 14px;
+          }
+
+          @include media-breakpoint-down(xs){
+            position: static;
+            text-align: left;
+          }
+
           &:nth-child(1){
             z-index: 1;
             font-size: 20px;
             font-weight: $fw-bold;
+
+            @include media-breakpoint-down(md){
+              font-size: 16px;
+            }
+
+            @include media-breakpoint-down(xs){
+              padding: 24px 24px 14px;
+            }
+
+            br{
+              @include media-breakpoint-down(xs){
+                display: none;
+              }
+            }
+
+            p{
+              margin-bottom: 0;
+            }
+          }
+
+          &:nth-child(2){
+            &>*:last-child{
+              margin-bottom: 0;
+            }
+            @include media-breakpoint-down(xs){
+              padding: 0 24px 24px;
+            }
           }
         }
 
@@ -56,8 +138,26 @@
           div{
             &:nth-child(1){
               opacity: 0;
+
+              @include media-breakpoint-down(xs){
+                opacity: 1;
+              }
             }
           }
+        }
+      }
+    }
+
+    &-button{
+      &-prev{
+        @include media-breakpoint-down(xs){
+          display: none;
+        }
+      }
+
+      &-next{
+        @include media-breakpoint-down(xs){
+          display: none;
         }
       }
     }
