--- a/wp-content/themes/uhc/src/scss/common/sections/info_section_dark_background.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/info_section_dark_background.scss
@@ -9,12 +9,31 @@
     display: flex;
     flex-direction: column;
     gap: 80px;
+
+    @include media-breakpoint-down(md){
+      gap: 40px;
+    }
+
+    @include media-breakpoint-down(sm){
+      padding: 60px 12px;
+      gap: 24px;
+    }
   }
 
   &-top{
     display: flex;
     align-items: center;
     gap: 85px;
+
+    @include media-breakpoint-down(md){
+      gap: 30px;
+    }
+
+    @include media-breakpoint-down(sm){
+      flex-direction: column;
+      text-align: center;
+      gap: 24px;
+    }
 
     h2{
       font-size: 28px;
@@ -24,8 +43,27 @@
       font-size: 20px;
       font-weight: $fw-medium;
 
+      @include media-breakpoint-down(md){
+        font-size: 18px;
+      }
+
+      @include media-breakpoint-down(sm){
+        font-size: 14px;
+      }
+
       h1, h2, h3, h4, h5, h6{
         color: $primary-2;
+      }
+
+      h2{
+        @include media-breakpoint-down(md){
+          font-size: 20px;
+          margin-bottom: 30px;
+        }
+      }
+
+      &>*:last-child{
+        margin-bottom: 0;
       }
     }
 
@@ -35,6 +73,23 @@
       height: 350px;
       overflow: hidden;
       border-radius: 50px;
+
+      @include media-breakpoint-down(md){
+        min-width: 319px;
+        width: 319px;
+        height: 319px;
+      }
+
+      @include media-breakpoint-down(sm){
+        width: 100%;
+        max-width: 319px;
+        min-width: auto;
+        border-radius: 24px;
+      }
+
+      @include media-breakpoint-down(sm){
+        height: auto;
+      }
 
       img{
         object-fit: cover;
@@ -46,6 +101,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 34px;
+
+    @include media-breakpoint-down(sm){
+      flex-direction: column;
+    }
   }
 
   &-card{
@@ -55,6 +114,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @include media-breakpoint-down(sm){
+      width: 100%;
+    }
 
     &__title{
       font-weight: $fw-bold;
