--- a/wp-content/themes/uhc/src/scss/common/sections/team.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/team.scss
@@ -1,13 +1,46 @@
 .team{
+
+  .container{
+    @include media-breakpoint-down(xs){
+      padding: 0;
+    }
+  }
+
   h2{
     text-align: center;
     margin-bottom: 60px;
+
+    @include media-breakpoint-down(sm){
+      margin-bottom: 36px;
+    }
+
+    @include media-breakpoint-down(xs){
+      padding: 0 20px;
+    }
   }
 
   &-wrapper{
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
+
+    @include media-breakpoint-down(md){
+      gap: 40px 30px;
+    }
+
+    @include media-breakpoint-down(xs){
+      flex-wrap: nowrap;
+      overflow: auto;
+      width: auto;
+      min-width: 100%;
+      scrollbar-width: none;
+      padding: 0 20px;
+      gap: 36px;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
   }
 
   &-item{
@@ -16,6 +49,15 @@
     flex-direction: column;
     gap: 8px;
 
+    @include media-breakpoint-down(md){
+      width: calc(50% - 15px);
+    }
+
+    @include media-breakpoint-down(xs){
+      width: 250px;
+      min-width: 250px;
+    }
+
     &__photo{
       width: 100%;
       height: 360px;
@@ -23,6 +65,11 @@
       overflow: hidden;
       position: relative;
       border-radius: 50px;
+
+      @include media-breakpoint-down(xs){
+        height: 300px;
+        border-radius: 24px;
+      }
 
       img{
         width: 100%;
@@ -55,9 +102,17 @@
       opacity: 0;
       transition: opacity ease-out $transition;
 
+      @include media-breakpoint-down(xs){
+        padding: 15px;
+      }
+
       div{
         &:nth-child(2){
           padding-top: 30px;
+
+          @include media-breakpoint-down(sm){
+            padding-top: 0;
+          }
 
           a{
             transition: transform ease-out $transition;
@@ -80,5 +135,9 @@
     display: flex;
     justify-content: center;
     padding-top: 60px;
+
+    @include media-breakpoint-down(xs){
+      display: none;
+    }
   }
 }
