--- a/wp-content/themes/uhc/src/scss/common/sections/faq.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/faq.scss
@@ -19,8 +19,12 @@
       padding: 32px 0;
       transition: color ease-out $transition;
 
-      @include media-breakpoint-down(xs){
+      @include media-breakpoint-down(sm){
         font-size: 24px;
+      }
+
+      @include media-breakpoint-down(xs){
+        padding: 16px 0;
       }
 
       &_Medium{
@@ -36,21 +40,26 @@
       }
 
       span{
-        &:nth-child(1){
+        &:not(.number):nth-child(1){
           flex: 1 1 auto;
         }
 
         &.number{
-          min-width: 295px;
+          width: 295px;
+
 
           @media (max-width: 1400px) {
-            min-width: 100px;
+            width: 100px;
+          }
+
+          @include media-breakpoint-down(xs){
+            width: 50px;
           }
         }
         &.arrow{
           margin-left: auto;
 
-          @include media-breakpoint-down(xs){
+          @include media-breakpoint-down(sm){
             height: 32px;
             width: 32px;
           }
@@ -99,6 +108,10 @@
 
           .team-wrapper{
             gap: 55px;
+
+            @include media-breakpoint-down(lg){
+              gap: 30px;
+            }
           }
         }
 
@@ -120,12 +133,17 @@
 
     .two-columns{
       display: flex;
-      gap: 30px 144px;
+      gap: 0 144px;
       font-size: 16px;
       text-align: justify;
 
-      @media (max-width: 1199.98px) {
-        gap: 30px 60px;
+      @include media-breakpoint-down(lg){
+        gap: 0 30px;
+      }
+
+      @include media-breakpoint-down(xs){
+        flex-direction: column;
+        text-align: left;
       }
 
       div{
