--- a/wp-content/themes/uhc/src/scss/common/sections/quotes_slider.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/quotes_slider.scss
@@ -1,30 +1,92 @@
 .quotes-slider-section{
+
+  @include media-breakpoint-down(sm){
+    margin-top: 20px;
+  }
+
   .container{
     display: flex;
     flex-wrap: wrap;
     gap: 50px 80px;
+
+    @include media-breakpoint-down(md){
+      flex-direction: column;
+    }
+
+    @include media-breakpoint-down(sm){
+      gap: 40px;
+    }
   }
 
   .quotes-slider-content{
     max-width: calc(100% - 358px - 80px);
+
+    @include media-breakpoint-down(md){
+      max-width: 100%;
+      display: contents;
+    }
+
+    h1{
+      @include media-breakpoint-down(md){
+        order: 1;
+        margin-bottom: 0;
+        text-align: center;
+      }
+    }
   }
 
   .quotes-slider-image{
     min-width: 358px;
     max-width: 358px;
 
+    @include media-breakpoint-down(md){
+      min-width: auto;
+      max-width: 400px;
+      max-height: 350px;
+      width: 100%;
+      overflow: hidden;
+      order: 2;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50px;
+    }
+
+    @include media-breakpoint-down(sm){
+      border-radius: 24px;
+      max-height: 343px;
+    }
+
     img{
       width: 100%;
       height: auto;
       border-radius: 50px;
       object-fit: contain;
+
+      @include media-breakpoint-down(md){
+        object-fit: cover;
+      }
     }
   }
 
   .quotes-slider{
+    max-width: 100%;
+
+    @include media-breakpoint-down(md){
+      order: 3;
+      flex-direction: column-reverse;
+      display: flex;
+    }
+
    .swiper-pagination{
      position: static;
      margin-bottom: 24px;
+
+     @include media-breakpoint-down(md){
+       margin-bottom: 0;
+       margin-top: 24px;
+     }
    }
 
     &-item{
@@ -42,6 +104,10 @@
         position: relative;
         width: calc(100% - 5px);
 
+        @include media-breakpoint-down(xs){
+          font-size: 14px;
+        }
+
         &:before,
         &:after{
           content: '';
@@ -52,6 +118,11 @@
           background-position: center;
           position: absolute;
           background-size: contain;
+
+          @include media-breakpoint-down(xs){
+            width: 20px;
+            height: 30px;
+          }
         }
 
         &:before{
@@ -69,11 +140,20 @@
       &__author{
         font-weight: $fw-bold;
         font-size: 16px;
+
+        @include media-breakpoint-down(xs){
+          font-size: 12px;
+        }
       }
     }
   }
 
   .quotes-button{
+
+    @include media-breakpoint-down(md){
+      display: none;
+    }
+
     a{
       border-radius: 20px;
       border: 1px solid $primary-color;
@@ -114,5 +194,9 @@
 .page-id-282{
   .quotes-slider-section{
     padding-bottom: 20px;
+
+    @include media-breakpoint-down(xs){
+      padding-bottom: 0;
+    }
   }
 }
