--- a/wp-content/themes/uhc/src/scss/components/typography.scss
+++ b/wp-content/themes/uhc/src/scss/components/typography.scss
@@ -22,6 +22,10 @@ h1, .h1 {
 	@include media-breakpoint-down(sm){
 		font-size: 36px;
 	}
+
+	@include media-breakpoint-down(xs){
+		font-size: 24px;
+	}
 }
 
 h2, .h2 {
