--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -6,6 +6,10 @@
       display: flex;
       flex-wrap: wrap;
       gap: 48px;
+
+      @include media-breakpoint-down(sm){
+        gap: 40px 24px;
+      }
     }
 
     &_reverse{
@@ -32,7 +36,11 @@
         align-items: center;
         gap: 7px;
         text-decoration: none;
-        
+
+        @include media-breakpoint-down(sm){
+          font-size: 12px;
+        }
+
         &:is(:hover, :focus){
           text-decoration: underline;
         }
@@ -53,10 +61,23 @@
       gap: 24px;
       flex: 1 1 auto;
 
+      @include media-breakpoint-down(md){
+        max-width: calc(100% - 300px - 48px);
+      }
+
+      @include media-breakpoint-down(sm){
+        max-width: calc(100% - 160px - 24px);
+      }
+
       h1{
         font-size: 20px;
         text-transform: none;
         max-width: 633px;
+        margin-bottom: 0;
+
+        @include media-breakpoint-down(sm){
+          font-size: 14px;
+        }
       }
     }
 
@@ -64,10 +85,14 @@
       text-transform: uppercase;
       font-size: 16px;
 
+      @include media-breakpoint-down(sm){
+        font-size: 10px;
+      }
+
       a{
         color: $primary-color;
         text-decoration: none;
-        
+
         &:is(:hover, :focus){
           text-decoration: underline;
         }
@@ -99,6 +124,17 @@
       justify-content: center;
       align-items: center;
 
+      @include media-breakpoint-down(md){
+        height: 300px;
+        max-width: 300px;
+      }
+
+      @include media-breakpoint-down(sm){
+        height: 160px;
+        max-width: 160px;
+        border-radius: 24px;
+      }
+
       img,
       svg{
         object-position: center;
@@ -113,6 +149,12 @@
           width: auto;
           height: auto;
           object-fit: none;
+
+          @include media-breakpoint-down(sm){
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
         }
       }
     }
@@ -122,12 +164,23 @@
     padding-bottom: 128px;
     font-size: 20px;
 
+    @include media-breakpoint-down(sm){
+      padding-bottom: 60px;
+      font-size: 14px;
+    }
+
     .container{
-      max-width: 1070px;
+      @include media-breakpoint-up(md){
+        max-width: 1070px;
+      }
     }
 
     &__inner{
       padding-top: 123px;
+
+      @include media-breakpoint-down(sm){
+        padding-top: 60px;
+      }
     }
   }
 }
