--- a/wp-content/themes/uhc/src/scss/common/sections/page-head.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/page-head.scss
@@ -3,9 +3,23 @@
     padding-top: 30px;
     padding-bottom: 40px;
 
+    @include media-breakpoint-down(lg){
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    @include media-breakpoint-down(sm){
+      margin: 20px 0 40px;
+    }
+
     h1{
       line-height: normal;
       margin-bottom: 40px;
+
+      @include media-breakpoint-down(md){
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
 
     &__excerpt{
