--- a/wp-content/themes/uhc/src/scss/components/typography.scss
+++ b/wp-content/themes/uhc/src/scss/components/typography.scss
@@ -19,7 +19,7 @@ h1, .h1 {
 	font-size: 60px;
 	margin-bottom: 24px;
 
-	@include media-breakpoint-down(sm){
+	@include media-breakpoint-down(md){
 		font-size: 36px;
 	}
 
