--- a/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
@@ -148,11 +148,12 @@
 
     @include media-breakpoint-down(md){
       padding-top: 20px;
-      font-size: 12px;
+      font-size: 16px;
       font-weight: 500;
     }
 
     @include media-breakpoint-down(xs){
+      font-size: 12px;
       order: 2;
       padding-top: 0;
     }
@@ -164,6 +165,10 @@
 
   &__excerpt{
     padding-top: 32px;
+
+    @include media-breakpoint-down(md){
+      font-size: 14px;
+    }
   }
 
   &__original {
@@ -199,6 +204,16 @@
       font-size: 16px;
       margin-bottom: 12px;
       min-height: 40px;
+
+      @include media-breakpoint-down(sm){
+        min-height: auto;
+        margin-bottom: 20px!important;
+      }
+
+      @include media-breakpoint-down(xs){
+        min-height: auto;
+        margin-bottom: 0!important;
+      }
     }
   }
 
@@ -263,6 +278,18 @@
     padding: 24px;
     position: relative;
     width: 100%;
+    border-radius: 24px;
+
+    @include media-breakpoint-down(md){
+      gap: 20px;
+    }
+
+    @include media-breakpoint-down(sm){
+      flex-direction: column;
+      background-color: $gray-1;
+      gap: 16px;
+      padding: 16px;
+    }
 
     & > *{
       z-index: 1;
@@ -296,6 +323,20 @@
     .post-preview-content{
       padding: 50px 0;
       flex: 1 1 auto;
+
+      @include media-breakpoint-down(lg){
+        padding: 20px 0;
+      }
+
+      @include media-breakpoint-down(sm){
+        padding: 0;
+      }
+    }
+
+    .post-preview__excerpt{
+      @include media-breakpoint-down(sm){
+        display: none;
+      }
     }
 
     &:before{
@@ -308,11 +349,27 @@
       left: 0;
       width: 100%;
       height: 100%;
+
+      @include media-breakpoint-down(md){
+        border-radius: 24px;
+      }
+
+      @include media-breakpoint-down(md){
+        display: none;
+      }
     }
 
     .post-preview__thumbnail{
       height: 300px;
       max-width: 300px;
+      min-width: 300px;
+
+      @include media-breakpoint-down(sm){
+        width: 100%;
+        height: 311px;
+        max-width: 311px;
+        min-width: auto;
+      }
     }
 
     .post-preview__title{
@@ -320,6 +377,21 @@
       font-size: 24px;
       font-weight: $fw-bold;
       margin-bottom: 40px;
+
+      @include media-breakpoint-down(lg){
+        padding-top: 0;
+        margin-bottom: 20px;
+      }
+
+      @include media-breakpoint-down(md){
+        font-size: 18px;
+        margin-bottom: 0;
+      }
+
+      @include media-breakpoint-down(sm){
+        font-size: 14px;
+        text-align: center;
+      }
     }
 
     .post-preview-link{
@@ -328,9 +400,24 @@
       max-width: 50px;
       align-items: flex-end;
 
+      @include media-breakpoint-down(sm){
+        margin-left: auto;
+        width: 30px;
+        height: 30px;
+      }
+
+      svg{
+        max-width: 100%;
+      }
+
       a{
         transition: opacity ease-out $transition, transform ease-out $transition;
         opacity: 0;
+
+        @include media-breakpoint-down(sm){
+          opacity: 1;
+
+        }
 
         &:is(:hover, :focus){
           transform: scale(0.9);
@@ -342,8 +429,58 @@
 
 .archive-body_3-columns{
   .post-preview{
+    @include media-breakpoint-down(md){
+      font-size: 14px;
+    }
+
+    @include media-breakpoint-down(sm){
+      font-size: 14px;
+      padding-left: calc(140px + 32px);
+      min-height: calc(140px + 32px);
+    }
+
+    @include media-breakpoint-down(xs){
+      flex-direction: column-reverse;
+      justify-content: center;
+    }
+
     .post-preview__thumbnail{
       height: 340px;
+
+      @include media-breakpoint-down(lg){
+        height: 254px;
+      }
+
+      @include media-breakpoint-down(md){
+        height: 293px;
+      }
+
+      @include media-breakpoint-down(sm){
+        width: 140px;
+        height: 140px;
+        position: absolute;
+        top: 16px;
+        left: 16px;
+      }
+    }
+
+    .post-preview__excerpt{
+      @include media-breakpoint-down(sm){
+        display: none;
+      }
+    }
+
+    .post-preview__original{
+      @include media-breakpoint-down(sm){
+        margin-bottom: 0;
+        font-size: 8px;
+      }
+    }
+
+    .post-preview__title{
+      @include media-breakpoint-down(sm){
+        padding-top: 0;
+      }
     }
   }
 }
