--- a/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/single-post.scss
@@ -2,13 +2,17 @@
   &-head{
     margin-top: 70px;
 
+    @include media-breakpoint-down(sm){
+      margin-top: 20px;
+    }
+
     .container{
       display: flex;
       flex-wrap: wrap;
       gap: 48px;
 
       @include media-breakpoint-down(sm){
-        gap: 40px 24px;
+        gap: 24px;
       }
     }
 
@@ -21,8 +25,24 @@
     &_flexible-template{
       margin: 200px 0;
 
+      @include media-breakpoint-down(lg){
+        margin: 120px 0;
+      }
+
+      @include media-breakpoint-down(sm){
+        margin: 60px 0;
+      }
+
       &:first-child{
         margin: 0 0 60px;
+      }
+
+      .single-post-head__thumbnail{
+        @include media-breakpoint-down(sm){
+          max-width: 300px;
+          width: 100%;
+          height: 300px;
+        }
       }
     }
 
@@ -105,10 +125,26 @@
       display: flex;
       align-items: center;
 
+      @include media-breakpoint-down(md){
+        max-width: calc(100% - 300px - 48px);
+      }
+
+      @include media-breakpoint-down(sm){
+        max-width: 100%;
+      }
+
       &-inner{
         h1{
           font-size: 36px;
           text-transform: none;
+
+          @include media-breakpoint-down(xs){
+            font-size: 28px;
+          }
+        }
+
+        &>*:last-child{
+          margin-bottom: 0;
         }
       }
     }
@@ -127,12 +163,12 @@
       @include media-breakpoint-down(md){
         height: 300px;
         max-width: 300px;
+        border-radius: 24px;
       }
 
       @include media-breakpoint-down(sm){
         height: 160px;
         max-width: 160px;
-        border-radius: 24px;
       }
 
       img,
