--- a/wp-content/themes/uhc/src/scss/common/sections/text_in_frame.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/text_in_frame.scss
@@ -8,6 +8,14 @@
     border-radius: 50px;
     padding: 32px 46px;
 
+    @include media-breakpoint-down(lg){
+      border-radius: 24px;
+    }
+
+    @include media-breakpoint-down(md){
+      padding: 30px 20px;
+    }
+
     &>*:last-child{
       margin-bottom: 0;
     }
