--- a/wp-content/themes/uhc/src/scss/components/form.scss
+++ b/wp-content/themes/uhc/src/scss/components/form.scss
@@ -18,6 +18,10 @@ textarea{
   gap: 8px;
   margin-bottom: 32px;
 
+  @include media-breakpoint-down(sm){
+    margin-bottom: 24px;
+  }
+
   &_submit{
     flex-direction: row;
     align-items: center;
